[gd_scene load_steps=2 format=3 uid="uid://dwpt4c3u5rkee"]

[ext_resource type="Script" path="res://Interface/bottom_menu_button.gd" id="1_lhw33"]

[node name="CampButton" type="Button"]
custom_minimum_size = Vector2(200, 0)
text = "Camp"
script = ExtResource("1_lhw33")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
